# polytracker

./: .dockerignore  .flake8  .gitignore  .gitmodules  .mypy.ini  .ruff.toml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile-pdfium.demo  Dockerfile-poppler.demo  Dockerfile-qpdf.demo  Dockerfile-test.demo  Dockerfile.demo  LICENSE  Makefile  README.md  format.sh  index.html  mutool-draw  mutool.sh  mypy.ini  notes_for_peter.txt  pdfium_patch  setup.py
polytracker/: CMakeLists.txt  __init__.py  __main__.py  bitmap.py  build.py  cache.py  cfg.py  clustering.py  containerization.py  database.py  datalog.py  diffing.py  disjoint_set.py  dumptdag.py  grammars.py  graphs.py  inputs.py  mapping.py  parsing.py  plugins.py  polytracker.py  repl.py  taint_dag.py  taint_forest.py  tracing.py  visualizations.py
polytracker/abi_lists/ignore_lists/: abi_ignore_list.txt  helpme.txt  libc_ignore_list.txt  pthread_ignore_list.txt
polytracker/abi_lists/old_lists/: cxx_ignore_list.txt  dl_ignore_list.txt  libc_ignore_list.txt  rt_ignore_list.txt  unwind_ignore_list.txt
polytracker/abi_lists/old_track_lists/: dfsan_abilist.txt  polytrack_abilist.txt
polytracker/abi_lists/track_lists/: dfsan_abilist.txt  polytrack_abilist.txt
polytracker/custom_abi/: CMakeLists.txt  cxx_ignore.txt  dfsan_abilist.txt  fontconfig  gmp  libfreetype_discard.txt  libpng_list.txt  libxml2_discard.txt  libz  pdfium_abi_list.txt  polytrack_abilist.txt  polytracker_abilist.txt  pthread_ignore_list.txt  ssl
polytracker/cxx_libs/bitcode/cxx_static.dir/: any.cpp.o.bc  exception.cpp.o.bc  functional.cpp.o.bc  optional.cpp.o.bc  regex.cpp.o.bc  system_error.cpp.o.bc  vector.cpp.o.bc
polytracker/dfsan/: CMakeLists.txt
polytracker/dfsan/dfsan_includes/: dfsan_types.h
polytracker/dfsan/dfsan_pass/: CMakeLists.txt  DataFlowSanitizer.cpp
polytracker/dfsan/dfsan_rt/: CMakeLists.txt  build_lib.py  dfsan_interface.h
polytracker/dfsan/dfsan_sources/: CMakeLists.txt  taint_management.cpp  taint_sources.cpp
polytracker/include/dfsan/: common_interface_defs.h  dfsan.h  dfsan_interface.h  dfsan_log_mgmt.h  dfsan_platform.h  dfsan_types.h  roaring.c  roaring.h  taint_management.hpp
polytracker/include/polyclang/: polytracker.h
polytracker/include/polytracker/: basic_block_types.h  basic_block_utils.h  basic_block_utils_test.h  bb_splitting_pass.h  bb_track_pass.h  dfsan_types.h  early_construct.h  json.hpp  logging.h  main.h  metadata_pass.h  output.h  polytracker.h  polytracker_pass.h  sqlite3.h  tablegen.h  taint.h  taint_sources.h  tracing.h  write_taints.h
polytracker/include/sanitizer_common/: sanitizer_flags.inc
polytracker/include/taintdag/: basic_blocks_section.h  bitmap_section.h  control_flow_log.h  encoding.h  encoding.hpp  error.h  error.hpp  events.h  fdmapping.hpp  fnmapping.h  fntrace.h  labeldeq.h  labeldeq.hpp  labels.h  labels.hpp  output.hpp  outputfile.h  outputfile.hpp  polytracker.h  section.h  section.hpp  sink.h  sink.hpp  storage.h  storage.hpp  stream_offset.h  string_table.h  string_table.hpp  taint.h  taint.hpp  taint_sink_log.hpp  taint_source.h  taint_source.hpp  taintdag.hpp  union.h  union.hpp  util.h  util.hpp
polytracker/includes/: polytracker.h
polytracker/includes/dfsan/: dfsan_interface.h  dfsan_log_mgmt.cpp  dfsan_log_mgmt.h  dfsan_platform.h  dfsan_types.h  taint_management.hpp
polytracker/polyclang/: CMakeLists.txt  polyclang.c  polyclang.cpp  polytracker.h
polytracker/polyprocess/: __main__.py  mimid  polyprocess.py
polytracker/scripts/: build_lib.py  create_stublist.py  cxx_syms.py  gllvm_build_libcxx.sh  libcxx_tracklist.py  list_diff.py  poly-link.py  polybuild.py  prefix_build.sh  test_cxx_decouple.sh  test_decouple.sh  test_single_pass.sh  track_list_diff.py
polytracker/src/: CMakeLists.txt
polytracker/src/compiler-rt/: CMakeLists.txt
polytracker/src/dfsan_pass/: BBSplittingPass.cpp  CMakeLists.txt  DataFlowSanitizer.cpp
polytracker/src/dfsan_rt/: CMakeLists.txt
polytracker/src/dfsan_sources/: CMakeLists.txt  taint_management.cpp  taint_sources.cpp
polytracker/src/passes/: BBSplittingPass.cpp  CMakeLists.txt  DataFlowSanitizer.cpp  PolytrackerPass.cpp  basic_blocks.cpp  bb_splitting_pass.cpp  bb_track_pass.cpp  dump_cxx_symbols.cpp  function_tracing.cpp  metadata_pass.cpp  pass_plugin.cpp  polytracker_pass.cpp  remove_fn_attr.cpp  taint_tracking.cpp  tainted_control_flow.cpp  utils.cpp
polytracker/src/polyclang/: polyclang.cpp
polytracker/src/polyprocess/: polyprocess.py
polytracker/src/polytracker/: CMakeLists.txt  gigatracer.cpp  logging.cpp  main.cpp  output.cpp  polytracker.cpp  tablegen.cpp  taint.cpp  tracing.cpp
polytracker/src/taint_sources/: CMakeLists.txt  argv.cpp  memory_taints.cpp  string_taints.cpp  taint_sources.cpp  write_taints.cpp
polytracker/src/taintdag/: CMakeLists.txt  encoding.cpp  error.cpp  events.cpp  fdmapping.cpp  fnmapping.cpp  fntrace.cpp  output.cpp  polytracker.cpp  print.cpp  util.cpp
polytracker/taint_sources/: CMakeLists.txt  taint_sources.cpp
polytracker/test/: CMakeLists.txt  taint_log_test1.cpp  taint_log_test2.cpp  test-polytracker  test_polytracker.py
polytracker/tests/: run_tests.sh  test_0_indexing.cpp  test_polytracker.py  test_setjmp.c
src/: CMakeLists.txt
src/gfanalyze/: CMakeLists.txt  gfanalyze.cpp
src/gfrt/: CMakeLists.txt  gfrt.cpp  taint_sources.cpp
src/librt/: CMakeLists.txt  tracelib.cpp
src/pass/: CMakeLists.txt  detour_taint_functions.cpp  gigafuncpass.cpp  instrument_basic_blocks.cpp  mark_basic_blocks.cpp  split_basic_blocks.cpp  tracebasicblocks.cpp
src/test/: CMakeLists.txt  event_helper.h  gfrt_test.cpp  librt_test.cpp  serialization_test.cpp  spsc_buffer_test.cpp  trace_reader_writer_test.cpp  varint_test.cpp
src/traceio/: CMakeLists.txt  trace_reader.cpp  trace_writer.cpp
unittests/src/taintdag/: CMakeLists.txt  bitmap_section.cpp  control_flow_log.cpp  encoding.cpp  error_exit_helper.h  events.cpp  fdmapping.cpp  fnmapping.cpp  fntrace.cpp  labeldeq.cpp  output.cpp  stream_offset.cpp  taintdag.cpp  tdag.cpp  union.cpp  utils.h
(+459 files in other folders)
