set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fPIC -Wall -Werror -Wno-c++98-compat-pedantic -Wno-undef -Wno-unused-parameter -Wno-reserved-id-macro -Wno-missing-noreturn -Wno-c++98-compat -Wno-vexing-parse -Wno-shadow-field-in-constructor -Wno-ignored-qualifiers")
add_library(Polytracker STATIC main.cpp logging.cpp taint.cpp output.cpp tracing.cpp)
target_link_libraries(Polytracker)
install (TARGETS Polytracker DESTINATION ${POLYTRACK_LIB_DIR})